crates/jupytypst/tests/snapshots/kernel_snapshots__persistent_styles.snap
---
source: crates/jupytypst/tests/kernel_snapshots.rs
expression: "run_case(KernelCase\n{\n    init: KernelInit::new(RenderMode::Svg, SourceMode::Markup), fixtures:\n    vec![], requests:\n    vec![Request::Execute\n    { input: r#\"#set heading(numbering: \"I.\")\n#show: emph\n\"# },\n    Request::Execute { input: r#\"= test\nemphed\n            \"# },],\n})"
---
init:
  default_format: Svg
  source_mode: Markup
  page_setup: |
  ```typc
  set page(width: auto, height: auto, margin: 16pt)
  ```
  inputs: []

--- request 1 ---
kind: execute
input: |
  ```typ
  #set heading(numbering: "I.")
  #show: emph

  ```
effective_format: Svg
status: ok
warnings: []
output_kind: svg
output: |
  ```html
  <style>
  .jupytypst-pages {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: flex-start;
  }
  .jupytypst-page {
    max-width: 100%;
    overflow: auto;
  }
  .jupytypst-page > svg {
    display: block;
    max-width: 100%;
    height: auto;
  }
  </style>
  <div class="jupytypst-pages"><div class="jupytypst-page"><svg class="typst-doc" viewBox="0 0 32 32" width="32pt" height="32pt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:h5="http://www.w3.org/1999/xhtml">
      <path class="typst-shape" fill="#ffffff" fill-rule="nonzero" d="M 0 0v 32 h 32 v -32 Z "/>
      <g/>
  </svg>
  </div></div>
  ```

--- request 2 ---
kind: execute
input: |
  ```typ
  = test
  emphed
              
  ```
effective_format: Svg
status: ok
warnings: []
output_kind: svg
output: |
  ```html
  <style>
  .jupytypst-pages {
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: flex-start;
  }
  .jupytypst-page {
    max-width: 100%;
    overflow: auto;
  }
  .jupytypst-page > svg {
    display: block;
    max-width: 100%;
    height: auto;
  }
  </style>
  <div class="jupytypst-pages"><div class="jupytypst-page"><svg class="typst-doc" viewBox="0 0 71.1622 57.42100000000001" width="71.1622pt" height="57.42100000000001pt" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:h5="http://www.w3.org/1999/xhtml">
      <path class="typst-shape" fill="#ffffff" fill-rule="nonzero" d="M 0 0v 57.421 h 71.1622 v -57.421 Z "/>
      <g>
          <g class="typst-group" transform="matrix(1 0 0 1 16 16)">
              <g>
                  <g class="typst-text" transform="matrix(1 0 0 -1 0 9.933)">
                      <use xlink:href="#g730FD4578B1E8411B36D2CD5466D0857" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
                      <use xlink:href="#g1AF4916480A199FAC03CA03923851327" x="5.6518" y="0" fill="#000000" fill-rule="nonzero"/>
                  </g>
                  <g class="typst-text" transform="matrix(1 0 0 -1 14.029399999999999 9.933)">
                      <use xlink:href="#g211777584208976398AF7CC57D4BA22E" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
                      <use xlink:href="#gE871A891315DE455A56AB45AD13913CB" x="5.513199999999999" y="0" fill="#000000" fill-rule="nonzero"/>
                      <use xlink:href="#g4B400BEED32CA5A2AF54FBBE8B454B69" x="13.0438" y="0" fill="#000000" fill-rule="nonzero"/>
                      <use xlink:href="#g211777584208976398AF7CC57D4BA22E" x="19.6196" y="0" fill="#000000" fill-rule="nonzero"/>
                  </g>
              </g>
          </g>
          <g class="typst-text" transform="matrix(1 0 0 -1 16 41.42100000000001)">
              <use xlink:href="#gA03E9C6FC96AAD8F926083AB0A66F7F2" x="0" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#g5AF7391957751D2BFC839CE6174FE02A" x="4.917000000000001" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gF053E7FECEB6DB314D4691E6FC4705D5" x="13.607000000000003" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#g99AAC843E99BC63AB14293C95D723FFA" x="19.316000000000003" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gA03E9C6FC96AAD8F926083AB0A66F7F2" x="25.234" y="0" fill="#000000" fill-rule="nonzero"/>
              <use xlink:href="#gDB6D8106FABA473580F64065298D3C4B" x="30.228" y="0" fill="#000000" fill-rule="nonzero"/>
          </g>
      </g>
      <defs id="glyph">
          <symbol id="g730FD4578B1E8411B36D2CD5466D0857" overflow="visible">
              <path d="M 0 0m 1.7556 8.0542 v -6.1754003 c 0 -1.2782 -0.43120003 -1.3398001 -1.2781999 -1.386 c -0.15400001 -0.092400014 -0.15400001 -0.4312 0 -0.5236 c 0.616 0.0154 1.7556 0.0308 2.3716 0.0308 c 0.61599994 0 1.7248001 -0.0154 2.3407998 -0.0308 c 0.15400028 0.0924 0.15400028 0.43119997 0 0.5236 c -0.84699965 0.046199977 -1.2781999 0.10780001 -1.2781999 1.386 v 6.1754003 c 0 1.2782001 0.43120027 1.3397999 1.2781999 1.3859997 c 0.15400028 0.09240055 0.15400028 0.43120003 0 0.5235996 c -0.6159997 -0.015399933 -1.7247999 -0.030799866 -2.3407998 -0.030799866 c -0.61599994 0 -1.7556 0.015399933 -2.3716 0.030799866 c -0.15400001 -0.0923996 -0.15400001 -0.43119907 0 -0.5235996 c 0.84699994 -0.0461998 1.2781999 -0.10779953 1.2781999 -1.3859997 Z "/>
          </symbol>
          <symbol id="g1AF4916480A199FAC03CA03923851327" overflow="visible">
              <path d="M 0 0m 0.7546 0.8932 c 0 -0.58519995 0.49280006 -1.0472 1.1087999 -1.0472 c 0.61599994 0 1.1396 0.4928 1.1396 1.0780001 c 0 0.6006 -0.4928 1.0626 -1.1088 1.0626 c -0.61599994 0 -1.1396 -0.4928 -1.1396 -1.0934 Z "/>
          </symbol>
          <symbol id="g211777584208976398AF7CC57D4BA22E" overflow="visible">
              <path d="M 0 0m 0.9702 6.6836 c -0.21560001 0 -0.44660002 -0.06160021 -0.64680004 -0.23099995 v -0.44659996 c 0 -0.07700014 0.015400022 -0.092400074 0.07699999 -0.092400074 h 1.0009999 c -0.030799985 -1.5553999 -0.046199918 -3.5266 -0.046199918 -4.2966 c 0 -0.53900003 0.13859999 -1.0626 0.4619999 -1.3398 c 0.35420012 -0.29259998 0.9086001 -0.43119997 1.2782001 -0.43119997 c 0.8469999 0 1.7864001 0.43119997 2.0943997 0.8624 c 0 0.18479997 -0.0923996 0.27719998 -0.27719975 0.43120003 c -0.20020008 -0.15400004 -0.58519983 -0.21560001 -0.8778 -0.21560001 c -0.33879995 0 -0.67760015 0.26179993 -0.67760015 1.0317999 c 0 0.7700001 -0.015399933 2.4178 -0.015399933 3.9578 h 1.5554001 c 0.1539998 0 0.36959982 0.06160021 0.36959982 0.20020008 v 0.47739983 c 0 0.06160021 -0.0461998 0.092400074 -0.12319994 0.092400074 h -1.8018 l 0.015399933 0.5236001 c 0.030800104 1.0318003 0.07700014 1.7402 0.07700014 1.7402 c 0 0.0923996 -0.046200037 0.1385994 -0.12320018 0.1385994 c -0.10780001 0 -0.6775999 -0.16939926 -0.9239998 -0.27719975 c -0.26180005 -0.10779953 -0.70840013 -0.20020008 -0.81620014 -0.33879948 c -0.10780001 -0.13860035 -0.16939998 -0.55440044 -0.16939998 -1.7864003 Z "/>
          </symbol>
          <symbol id="gE871A891315DE455A56AB45AD13913CB" overflow="visible">
              <path d="M 0 0m 6.6374 1.9866 c -0.6314001 -0.64680004 -1.4630003 -0.8162 -2.0482001 -0.8162 c -1.2012 0 -1.9404001 0.69299996 -1.9404001 2.2022 c 0 0.10780001 0.015400171 0.16939998 0.015400171 0.24639988 h 3.6959999 c 0.36959982 0 0.44659996 0.26180005 0.44659996 0.47739983 c 0 1.309 -0.5081997 2.7412 -2.7719998 2.7412 c -1.6170001 0 -3.4650002 -1.4322 -3.4650002 -3.7883997 c 0 -0.89320016 0.32339996 -1.8326001 0.9856 -2.4332001 c 0.58519995 -0.5236 1.3398 -0.77 2.4332 -0.77 c 1.0625999 0 2.1098 0.539 2.8798 1.6632 c 0 0.20019996 -0.07700014 0.47740006 -0.23099995 0.47740006 Z m -3.9116 2.2484002 c 0.015399933 0.53900003 0.092399836 1.1241999 0.30799985 1.4322 c 0.24640012 0.36959982 0.6622002 0.5236001 0.8316002 0.5236001 c 0.41579986 0 0.98559976 -0.40040016 0.98559976 -1.6324 c 0 -0.092400074 0 -0.29260015 -0.030799866 -0.32340002 Z "/>
          </symbol>
          <symbol id="g4B400BEED32CA5A2AF54FBBE8B454B69" overflow="visible">
              <path d="M 0 0m 0.7392 2.2484 c 0.06159997 -0.7545999 0.13859999 -1.4784 0.26180005 -2.0636 c 0.29259992 -0.0924 1.2782 -0.3388 2.1405997 -0.3388 c 1.1858003 0 2.6642 0.6468 2.6642 1.9866 c 0 0.5236 -0.12319994 0.9394001 -0.47739983 1.3244001 c -0.43120003 0.4928 -1.0780001 0.8778 -1.7864001 1.1858001 c -0.6160002 0.2617998 -0.83159995 0.75460005 -0.83159995 1.2012 c 0 0.3541999 0.29259992 0.64680004 0.7391999 0.64680004 c 0.53900003 0 1.0625999 -0.49280024 1.4476001 -1.4322004 c 0.27719975 -0.0461998 0.44659996 -0.030799866 0.60059977 0.07700014 c 0 0.55439997 -0.06159973 1.1396003 -0.20020008 1.6324 c -0.49279976 0.21560001 -0.8778 0.36959982 -1.7247999 0.36959982 c -0.8162 0 -1.5861999 -0.3079996 -2.079 -0.80079985 c -0.3542 -0.3541999 -0.52360004 -0.7853999 -0.52360004 -1.2012 c 0 -0.4619999 0.18479997 -0.8315997 0.4774 -1.155 c 0.47739995 -0.52359986 1.3244001 -1.0625999 1.7864 -1.2781999 c 0.61599994 -0.27719998 0.78540015 -0.83160007 0.78540015 -1.2012 c 0 -0.4928 -0.49280024 -0.75460005 -0.9086001 -0.75460005 c -0.6930001 0 -1.4322001 0.7084 -1.7556 1.8326001 c -0.24640012 0.0461998 -0.36960006 0.030799866 -0.61600006 -0.030800104 Z "/>
          </symbol>
          <symbol id="gA03E9C6FC96AAD8F926083AB0A66F7F2" overflow="visible">
              <path d="M 0 0m 4.246 1.023 c -0.40699983 -0.41799998 -0.72599983 -0.594 -1.3639998 -0.594 c -0.3959999 0 -0.85800004 0.23099998 -1.199 0.79199994 c -0.22000003 0.36300004 -0.352 0.86899996 -0.352 1.507 l 2.926 -0.021999836 c 0.13199997 0 0.20900011 0.065999985 0.20900011 0.1869998 c 0 0.924 -0.32999992 1.9140003 -1.8590002 1.9140003 c -0.9569999 0 -2.1999998 -0.9130001 -2.1999998 -2.5850003 c 0 -0.61599994 0.15399998 -1.2099999 0.517 -1.6279999 c 0.37399995 -0.44 0.8909999 -0.704 1.6829998 -0.704 c 0.8360002 0 1.4300003 0.385 1.8699999 0.957 c -0.032999992 0.110000014 -0.09899998 0.16499996 -0.23099995 0.176 Z m -2.882 2.079 c 0.20899999 1.2429998 0.979 1.3419998 1.2429999 1.3419998 c 0.41800022 0 0.9130001 -0.23099995 0.9130001 -1.1549997 c 0 -0.09899998 -0.04399991 -0.15400004 -0.16499996 -0.15400004 Z "/>
          </symbol>
          <symbol id="g5AF7391957751D2BFC839CE6174FE02A" overflow="visible">
              <path d="M 0 0m 1.87 3.938 c -0.011000037 0.33000016 -0.032999992 0.7260001 -0.08800006 0.8360002 c -0.021999955 0.05499983 -0.04399991 0.08799982 -0.13199997 0.08799982 c -0.30799997 -0.12099981 -0.594 -0.21999979 -1.3529999 -0.31900024 c -0.021999985 -0.065999985 0 -0.24199963 0.022000015 -0.3079996 c 0.594 -0.055000305 0.71500003 -0.11000013 0.71500003 -0.74800014 v -2.145 c 0 -0.902 -0.14300007 -0.957 -0.748 -1.001 c -0.066000015 -0.065999985 -0.066000015 -0.297 0 -0.36299998 c 0.32999998 0.011 0.748 0.022 1.188 0.022 c 0.44000006 0 0.7809999 -0.011 1.1110001 -0.022 c 0.065999985 0.066 0.065999985 0.297 0 0.36299998 c -0.5610001 0.055000007 -0.68200004 0.09900001 -0.68200004 1.001 v 1.8039999 c 0 0.23100019 0.0990001 0.36300015 0.18699992 0.46200013 c 0.44000006 0.42900014 0.8470001 0.6489999 1.188 0.6489999 c 0.41800022 0 0.7260003 -0.26399994 0.7260003 -1.0009999 v -1.914 c 0 -0.902 -0.0880003 -0.957 -0.68200016 -1.001 c -0.055000067 -0.065999985 -0.055000067 -0.297 0 -0.36299998 c 0.27499986 0.011 0.68200016 0.022 1.1219997 0.022 c 0.44000006 0 0.803 -0.011 1.0780001 -0.022 c 0.055000305 0.066 0.055000305 0.297 0 0.36299998 c -0.5499997 0.044 -0.6489997 0.09900001 -0.6489997 1.001 v 1.7490001 c 0 0.1539998 0 0.30799985 -0.011000156 0.43999982 c 0.5279999 0.58299994 1.0229998 0.7260001 1.4520001 0.7260001 c 0.41799974 0 0.65999985 -0.2420001 0.65999985 -0.9790001 v -1.9359999 c 0 -0.902 -0.11000013 -0.957 -0.68200016 -1.001 c -0.05499983 -0.065999985 -0.05499983 -0.297 0 -0.36299998 c 0.2750001 0.011 0.68200016 0.022 1.1220002 0.022 c 0.44000006 0 0.8250003 -0.011 1.1329999 -0.022 c 0.055000305 0.066 0.055000305 0.297 0 0.36299998 c -0.605 0.044 -0.704 0.09900001 -0.704 1.001 v 1.7379999 c 0 0.9790001 -0.16499996 1.7490001 -1.1329999 1.7490001 c -0.5609999 0 -1.243 -0.20900011 -1.815 -0.8140001 c -0.032999992 -0.032999992 -0.09899998 -0.08799982 -0.12099981 0.011000156 c -0.09899998 0.45099974 -0.52800035 0.803 -1.1000001 0.803 c -0.638 0 -1.21 -0.37400007 -1.6719999 -0.89100003 c -0.055000067 -0.055000067 -0.12100005 -0.13199997 -0.13200009 0 Z "/>
          </symbol>
          <symbol id="gF053E7FECEB6DB314D4691E6FC4705D5" overflow="visible">
              <path d="M 0 0m 1.716 4.048 c -0.010999918 0.32999992 -0.032999992 0.6160002 -0.08799994 0.7260003 c -0.022000074 0.05499983 -0.04400003 0.08799982 -0.13199997 0.08799982 c -0.3080001 -0.12099981 -0.59400004 -0.21999979 -1.353 -0.31900024 c -0.022000007 -0.065999985 0 -0.24199963 0.021999985 -0.3079996 c 0.594 -0.055000305 0.71500003 -0.11000013 0.71500003 -0.74800014 v -4.697 c 0 -0.91299987 -0.12099999 -0.96799994 -0.792 -1.0009999 c -0.066 -0.065999985 -0.066 -0.29699993 0 -0.36299992 c 0.385 0.010999918 0.792 0.021999836 1.2319999 0.021999836 c 0.44000006 0 0.9680002 -0.010999918 1.3310001 -0.021999836 c 0.065999985 0.065999985 0.065999985 0.29699993 0 0.36299992 c -0.781 0.04399991 -0.90200007 0.08800006 -0.90200007 1.0009999 v 1.1880001 c 0 0.143 0.04400003 0.132 0.15400004 0.088 c 0.27499998 -0.11 0.6049999 -0.176 0.9569999 -0.176 c 0.6160002 0 1.1660001 0.187 1.6169999 0.616 c 0.5170002 0.506 0.8140001 1.188 0.8140001 2.079 c 0 1.1659999 -0.8249998 2.244 -1.947 2.244 c -0.5059998 0 -1.0669999 -0.32999992 -1.5069999 -0.8249998 c -0.065999985 -0.06600022 -0.110000014 -0.06600022 -0.12100005 0.043999672 Z m 0.20899999 -0.40699983 c 0.286 0.352 0.79200006 0.6819999 1.1110001 0.6819999 c 0.704 0 1.3089998 -0.79200006 1.3089998 -2.0349998 c 0 -0.90200007 -0.31899977 -2.0240002 -1.5509999 -2.0240002 c -0.19799995 0 -0.58299994 0.055000007 -0.7809999 0.231 c -0.22000003 0.19800001 -0.26400006 0.264 -0.26400006 0.65999997 v 2.002 c 0 0.23099995 0.04400003 0.32999992 0.176 0.48399997 Z "/>
          </symbol>
          <symbol id="g99AAC843E99BC63AB14293C95D723FFA" overflow="visible">
              <path d="M 0 0m 1.837 3.146 c 0 0.23100019 0.09899998 0.36300015 0.18699992 0.46200013 c 0.41799998 0.40699983 0.9790001 0.6489999 1.408 0.6489999 c 0.22000003 0 0.45099998 -0.14300013 0.58299994 -0.3959999 c 0.11000013 -0.22000003 0.13199997 -0.5170002 0.13199997 -0.8470001 v -1.6719999 c 0 -0.902 -0.10999966 -0.946 -0.6819999 -1.001 c -0.05499983 -0.065999985 -0.05499983 -0.297 0 -0.36299998 c 0.3080001 0.011 0.6819999 0.022 1.122 0.022 c 0.44000006 0 0.803 -0.011 1.1659999 -0.022 c 0.055000305 0.066 0.055000305 0.297 0 0.36299998 c -0.6159997 0.055000007 -0.737 0.09900001 -0.737 1.001 v 1.6389999 c 0 0.605 -0.043999672 1.144 -0.29699993 1.474 c -0.1869998 0.2420001 -0.5279999 0.37400007 -0.91299987 0.37400007 c -0.53900003 0 -1.1990001 -0.14300013 -1.87 -0.89100003 c 0 -0.010999918 -0.011000037 -0.010999918 -0.021999955 -0.022000074 c -0.032999992 -0.04399991 -0.08800006 -0.109999895 -0.08800006 0.022000074 l 0.011000037 2.4750001 c 0 0.7149997 0.04400003 1.1549997 0.04400003 1.1549997 c 0 0.07700014 -0.04400003 0.11000013 -0.143 0.11000013 c -0.2750001 -0.11000013 -1.1 -0.26399994 -1.5400001 -0.29699993 c -0.022 -0.0880003 0 -0.26399994 0.066 -0.32999992 c 0.032999992 0 0.065999985 0 0.09900001 0 c 0.484 -0.032999992 0.605 -0.032999992 0.605 -0.90199995 v -4.807 c 0 -0.913 -0.13200003 -0.957 -0.77 -1.001 c -0.066 -0.065999985 -0.066 -0.297 0 -0.36299998 c 0.36299998 0.011 0.77 0.022 1.21 0.022 c 0.41799998 0 0.7809999 -0.011 1.089 -0.022 c 0.065999985 0.066 0.065999985 0.297 0 0.36299998 c -0.561 0.044 -0.65999997 0.088 -0.65999997 1.001 Z "/>
          </symbol>
          <symbol id="gDB6D8106FABA473580F64065298D3C4B" overflow="visible">
              <path d="M 0 0m 3.674 0.55 c 0.055000067 0.04399997 0.15400004 0.065999985 0.16499996 -0.011000037 c 0.032999992 -0.26399997 0.12100005 -0.649 0.12100005 -0.649 c 0.08799982 -0.033000007 0.14300013 -0.022 0.20900011 0 c 0.24199963 0.198 0.62699986 0.36299998 1.2979999 0.44 c 0.065999985 0.066000015 0.065999985 0.231 0 0.297 c -0.704 0.055000007 -0.803 0.264 -0.803 0.803 v 4.9830003 c 0 0.7149997 0.04400015 1.1549997 0.04400015 1.1549997 c 0 0.07700014 -0.04400015 0.11000013 -0.14300013 0.11000013 c -0.2750001 -0.11000013 -1.1000001 -0.26399994 -1.54 -0.29699993 c -0.022000074 -0.0880003 0 -0.26399994 0.065999985 -0.32999992 c 0.032999992 0 0.065999985 0 0.09899998 0 c 0.48399997 -0.032999992 0.605 -0.032999992 0.605 -0.90199995 v -1.408 c 0 -0.07700014 -0.022000074 -0.09899998 -0.09899998 -0.09899998 c -0.04400015 0 -0.49500012 0.1869998 -0.85800004 0.1869998 c -0.7260001 0 -1.21 -0.2420001 -1.6500001 -0.65999985 c -0.473 -0.47300005 -0.75899994 -1.1220002 -0.75899994 -1.9360001 c 0 -1.353 0.6819999 -2.343 1.87 -2.343 c 0.4289999 0 0.83599997 0.22 1.375 0.66 Z m 0.12100005 0.81399995 c 0 -0.20899999 -0.022000074 -0.29699993 -0.17600012 -0.42899996 c -0.40700006 -0.352 -0.75900006 -0.528 -1.0339999 -0.528 c -0.5940001 0 -1.21 0.649 -1.21 2.024 c 0 0.79200006 0.15400004 1.2319999 0.319 1.463 c 0.34100008 0.5169997 0.803 0.5499997 1.023 0.5499997 c 0.3959999 0 0.671 -0.14299965 0.89100003 -0.3959999 c 0.15400004 -0.17599988 0.18700004 -0.25299978 0.18700004 -0.59399986 Z "/>
          </symbol>
      </defs>
  </svg>
  </div></div>
  ```
